feat: multiple attachments management

--- a/app/javascript/scss/fields.sass
+++ b/app/javascript/scss/fields.sass
@@ -7,7 +7,7 @@ label
   cursor: pointer
 
 // to trigger required: true html validation
-input.image-input
+input.file-input
   height: 1px
   opacity: 0
   margin-bottom: 8px
