--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -61,11 +61,11 @@ ul#accordionSidebar.navbar-nav.bg-gradient-primary.sidebar.sidebar-dark.accordio
         h6.collapse-header Other Pages:
         a.collapse-item href="404.html"  404 Page
         a.collapse-item href="blank.html"  Blank Page
-  /! Nav Item - Posts
+  /! Nav Item - Samples
   li.nav-item
     = link_to cms_samples_path, class: 'nav-link' do
       i.fas.fa-fw.fa-chart-area
-      span Posts
+      span Samples
   /! Nav Item - Tables
   li.nav-item
     a.nav-link href="tables.html" 
