--- a/app/views/layouts/pdf/footer.html.slim
+++ b/app/views/layouts/pdf/footer.html.slim
@@ -7,6 +7,10 @@ html
   body
     #footer
       br
+      .remarks
+        .header Remarks
+        .content All currency is in US dollars.
+      br
       .company-details
         .name Company Name
         .register-no Business Reg. No.: 123456
