--- a/app/views/layouts/pdf/sample_pdf.html.slim
+++ b/app/views/layouts/pdf/sample_pdf.html.slim
@@ -2,15 +2,13 @@ doctype html
 html
   head
     meta charset="utf-8"
-    = wicked_pdf_stylesheet_link_tag "pdf/pdf"
-    link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"
   body
     #content
       table.w-100
         thead
           tr
-            th.logo style="text-align: center;"
-              = wicked_pdf_image_tag 'logo.jpg', class: 'logo'
+            th style="text-align: center;"
+              = image_tag image_url('/logo.jpg'), class: 'logo'
       table.w-100
         tbody
           tr
@@ -20,17 +18,17 @@ html
                   tr
                     td.label
                       | Invoice Number:
-                    td
+                    td style="padding-left: 20px"
                       = sample.id
                   tr
                     td.label
                       | Date of issue:
-                    td
+                    td style="padding-left: 20px"
                       = sample.publish_date
                   tr
                     td.label
                       | Issued to:
-                    td
+                    td style="padding-left: 20px"
                       = sample.user.first_name
             td.details
               table.w-100.right
@@ -60,7 +58,6 @@ html
               th
                 | Sub-Total
           tbody
-            - quantity = 100
             - grand_total = 0
             tr
               td
@@ -69,11 +66,10 @@ html
                 = sample.title
               td
                 = number_to_currency sample.price / 100.0
+              td 100
               td
-                = quantity
-              td
-                - grand_total += quantity * sample.price
-                = number_to_currency quantity * sample.price / 100.0
+                - grand_total += 100 * sample.price
+                = number_to_currency 100 * sample.price / 100.0
           tfooter
             tr
               td.no-border colspan='2'
@@ -83,12 +79,18 @@ html
                 = number_to_currency grand_total / 100.0
       br
       br
-      .issued-by
-        table align="right" 
+      .remarks
+        table
           tbody
             tr
-              td.label
-                | Issued by:
-              td
-                = sample.publish_date.display
+              td.header Remarks:
+            tr
+              td.content= sample.publish_date
+      br
+      .issued-by
+        table
+          tbody
+            tr
+              td.header Issued by:
+              td.content= sample.publish_date
       br
