--- a/app/views/layouts/cms/_radio.html.slim
+++ b/app/views/layouts/cms/_radio.html.slim
@@ -1,5 +1,5 @@
 .form-group
-  = form.label key, class: 'small font-weight-bold'
+  = form.label key, defined?(form_label) ? form_label : nil, class: 'small font-weight-bold'
   - options.each do |hash|
     .custom-control.custom-radio
       = form.radio_button key, hash[:value], class: 'custom-control-input', required: required
