--- a/app/views/layouts/cms/_number_field.html.slim
+++ b/app/views/layouts/cms/_number_field.html.slim
@@ -1,4 +1,4 @@
 .form-group
   - unless form.object.new_record?
-    = form.label key, class: 'small font-weight-bold'
+    = form.label key, defined?(form_label) ? form_label : nil, class: 'small font-weight-bold'
   = form.number_field key, { placeholder: key.to_s.titlecase, class: 'form-control' }.merge((defined? options) ? options : {})
