--- a/app/views/layouts/cms/_text_area.html.slim
+++ b/app/views/layouts/cms/_text_area.html.slim
@@ -1,4 +1,4 @@
 .form-group
   - unless form.object.new_record?
-    = form.label key, class: 'small font-weight-bold'
+    = form.label key, defined?(form_label) ? form_label : nil, class: 'small font-weight-bold'
   = form.text_area key, { placeholder: "Enter #{key.to_s}", class: 'form-control' }.merge((defined? options) ? options : {})
