style: change font family

--- a/app/javascript/scss/web/vendor.sass
+++ b/app/javascript/scss/web/vendor.sass
@@ -3,7 +3,7 @@
 body
   background: #fff
   color: #2f3138
-  font-family: "Open Sans", sans-serif
+  font-family: "Raleway", sans-serif
   &.mobile-nav-active
     overflow: hidden
     #mobile-nav
