style: common css classes that i use

--- a/app/javascript/scss/web/main.sass
+++ b/app/javascript/scss/web/main.sass
@@ -8,3 +8,25 @@
 @media (max-width: 991px)
   .header-padding
     padding-top: $header-height
+
+.center
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+
+.center-y
+  position: absolute
+  top: 50%
+  transform: translateY(-50%)
+
+.center-x
+  position: absolute
+  left: 50%
+  transform: translateX(-50%)
+
+.pointer-events-none
+  pointer-events: none
+
+.cursor-pointer
+  cursor: pointer
