--- a/app/views/users/mailer/reset_password_instructions.html.slim
+++ b/app/views/users/mailer/reset_password_instructions.html.slim
@@ -31,7 +31,7 @@ body style="background-color: #e9ecef;"
           | <td align="center" valign="top" width="600"
         table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           tr
-            td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;" 
+            td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;" 
               h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;"  Reset Your Password
         /![if (gte mso 9)|(IE)]
           | </td
@@ -48,7 +48,7 @@ body style="background-color: #e9ecef;"
         table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           /! start copy
           tr
-            td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;" 
+            td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;" 
               p style="margin: 0;"  Below is your reset password token. If you didn't request a new password, you can safely delete this email.
           /! end copy
           /! start button
@@ -60,11 +60,11 @@ body style="background-color: #e9ecef;"
                     table border="0" cellpadding="0" cellspacing="0" 
                       tr
                         td align="center" bgcolor="#1a82e2" style="border-radius: 6px;" 
-                          p#reset-password-token style="margin: 0;display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 24px; color: #ffffff; text-decoration: none; border-radius: 6px;" = @token
+                          p#reset-password-token style="margin: 0;display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 24px; color: #ffffff; text-decoration: none; border-radius: 6px;" = @token
           /! end button
           /! start copy
           tr
-            td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf" 
+            td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf" 
               p style="margin: 0;" 
                 | Cheers,
                 br>/
@@ -85,12 +85,12 @@ body style="background-color: #e9ecef;"
         table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           /! start permission
           tr
-            td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
+            td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
               p style="margin: 0;"  You received this email because we received a request for new password for your account. If you didn't request new password you can safely delete this email.
           /! end permission
           /! start unsubscribe
           tr
-            td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro'), Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
+            td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;" 
               /! <p style="margin: 0;">To stop receiving these emails, you can <a href="https://sendgrid.com" target="_blank">unsubscribe</a> at any time.</p
               p style="margin: 0;" 
                 | rails6boilerplate © #{Date.today.year}
