--- a/app/views/layouts/_cms_footer.html.slim
+++ b/app/views/layouts/_cms_footer.html.slim
@@ -2,5 +2,5 @@ footer.sticky-footer.bg-white
   .container.my-auto
     .copyright.text-center.my-auto
       span
-        | Copyright &copy; Your Website
+        | Copyright &copy; Rails6boilerplate
         = " #{Date.today.year}"
