--- a/app/javascript/scss/fields.sass
+++ b/app/javascript/scss/fields.sass
@@ -13,3 +13,13 @@ input.file-input
   margin-bottom: 8px
 .image-delete
   cursor: pointer
+
+.with-floating-right-icon
+  position: relative
+  cursor: pointer
+  img,
+  i
+    position: absolute
+    top: 50%
+    right: 0.75rem
+    transform: translateY(-50%)
