--- a/app/views/admin_users/registrations/edit.html.slim
+++ b/app/views/admin_users/registrations/edit.html.slim
@@ -12,13 +12,10 @@
       = form_for(resource, as: resource_name, url: send("#{resource_name}_registration_path"), html: { method: :patch }) do |f|
         = render 'devise/shared/error_messages', resource: resource
 
-        .form-group
-          = f.password_field :current_password, autocomplete: 'current-password', class: 'form-control form-control-user', placeholder: 'Current password'
+        = render 'layouts/fields/password_field', form: f, key: :current_password, options: { autocomplete: 'current-password', placeholder: 'Current password', class: 'form-control form-control-user' }
 
-        .form-group
-          = f.password_field :password, autocomplete: 'new-password', class: 'form-control form-control-user', placeholder: 'New password'
+        = render 'layouts/fields/password_field', form: f, key: :password, options: { autocomplete: 'new-password', placeholder: 'New password', class: 'form-control form-control-user' }
 
-        .form-group
-          = f.password_field :password_confirmation, autocomplete: 'new-password-confirmation', class: 'form-control form-control-user', placeholder: 'New password confirmation'
+        = render 'layouts/fields/password_field', form: f, key: :password_confirmation, options: { autocomplete: 'new-password-confirmation', placeholder: 'New password confirmation', class: 'form-control form-control-user' }
 
         = f.submit 'Update', class: 'btn btn-primary btn-user btn-block'
