--- a/app/views/application_mailer/contact.html.slim
+++ b/app/views/application_mailer/contact.html.slim
@@ -14,7 +14,7 @@ body style="background-color: #e9ecef;"
         table border="0" cellpadding="0" cellspacing="0" style="max-width: 600px;" width="100%" 
           tr
             td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;"
-              p style="margin: 0;" Contact from #{@name}:
+              p style="margin: 0;" Contact from #{@name} (#{@email}):
               
               = simple_format @message
     tr
