style: add font-size to inner table element to show that pdf styling works

--- a/public/pdf.css
+++ b/public/pdf.css
@@ -21,10 +21,11 @@ table {
 }
 
 table td,
-  table th {
+table th {
   border: 0;
   padding: 16px 0;
   vertical-align: top;
+  font-size: 40px;
 }
 
 table th {
