fix: add custom form label for all cms field templates

--- a/app/views/layouts/cms/_radio.html.slim
+++ b/app/views/layouts/cms/_radio.html.slim
@@ -1,5 +1,8 @@
 .form-group
-  = form.label key, defined?(form_label) ? form_label : nil, class: 'small font-weight-bold'
+  - if defined? field_label
+    = form.label key, field_label, class: 'small font-weight-bold'
+  - else
+    = form.label key, class: 'small font-weight-bold'
   - options.each do |hash|
     .custom-control.custom-radio
       = form.radio_button key, hash[:value], class: 'custom-control-input', required: required
